--- a/estilo.css
+++ b/estilo.css
@@ -321,14 +321,99 @@ footer > div{
 }
 
 .box-img-header img {
-    width: 150px; /* Defina a largura desejada para a sua imagem */
-    height: auto; /* Mantém a proporção da imagem */
-    border-radius: 50%; /* Adiciona um arredondamento às bordas da imagem */
-    border: 2px solid aqua; /* Adiciona uma borda sólida de cor aqua */
+    width: 150px; 
+    height: auto;
+    border-radius: 50%;
+    border: 2px solid aqua; 
     cursor: pointer;
-    transition: transform 0.3s; /* Adiciona uma transição suave de 0.3 segundos */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Adiciona uma sombra suave */
+    transition: transform 0.3s; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
 }
 .box-img-header img:hover {
-    transform: scale(1.1); /* Aumenta ligeiramente o tamanho da imagem quando o mouse está sobre ela */
+    transform: scale(1.1); 
+}
+
+.third-section {
+    padding: 20px;
+}
+
+.project-card {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+.project-info {
+    padding: 20px;
+    background-color: #f9f9f9;
+}
+
+.project-info h3 {
+    margin-top: 0;
+    font-size: 20px;
+    color: #333;
+}
+
+.project-info p {
+    margin-bottom: 0;
+    color: #666;
+}
+
+.project-buttons {
+    margin-top: 20px;
+}
+
+.project-buttons a {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+.project-buttons a:hover {
+    background-color: #0056b3;
+}
+
+.project-image {
+    position: relative;
+    overflow: hidden;
+}
+
+.project-image img {
+    width: 100%;
+    height: auto;
+    transition: transform 0.3s ease;
+}
+
+.project-image:hover img {
+    transform: scale(1.05);
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.project-image:hover .overlay {
+    opacity: 1;
+}
+
+.image-hover-text {
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
 }
