--- a/estilo.css
+++ b/estilo.css
@@ -47,6 +47,7 @@ header{
     padding: .8rem;
     background-color: #2f2f46;
     min-height: 50px;
+    font-size: 22px;
 }
 
 .action__btns button {
@@ -68,7 +69,8 @@ header{
 }
 
 .img-logo{
-    height: 100%;
+    height: 200%;
+    width: 200%;
     max-height: 60px;
 }
 
@@ -138,6 +140,7 @@ section{
     gap: 2rem;
     min-height: 650px;
     flex-wrap: wrap;
+    font-size: 19px;
 }
 
 .first-section > div{
@@ -148,7 +151,7 @@ section{
 }
 
 h1{
-    font-size: 4rem;
+    font-size: 1.7rem;
     letter-spacing: 8px;
     color: var(--white);
 }
@@ -209,6 +212,7 @@ h2{
     color: var(--dark4);
     font-weight: bold;
     letter-spacing: 2px;
+    font-size: 20px;
    
 }
 
@@ -462,9 +466,14 @@ footer#contact a:hover {
 }
 
 .depoimentos p {
-    font-size: 18px;
+    font-size: 1.7rem;
     line-height: 1.6;
     color: white;
+    margin-bottom: 1.5rem;
+}
+
+#depoimentos p b {
+    font-weight: bold; /* Define o peso da fonte em negrito */
 }
 
 .user-img {
@@ -479,6 +488,7 @@ footer#contact a:hover {
 .depoimentos p:last-child {
     margin-top: 10px;
     font-style: italic;
+    font-size: 22px;
 }
 
 .project {
