--- a/estilo.css
+++ b/estilo.css
@@ -658,36 +658,31 @@ a {
 }
 
 
-.aulas {
-  margin: 20px auto;
-  max-width: 800px;
-}
+  .services {
+            text-align: center;
+            margin-bottom: 30px;
+        }
 
-.aulas_title h2 {
-  font-size: 24px;
-  margin-bottom: 20px;
-}
+        .service_title {
+            margin-bottom: 20px;
+        }
 
-.servs {
-  display: flex;
-  flex-wrap: wrap;
-}
+        .owl-carousel .item {
+            margin: 15px;
+        }
 
-.aula {
-  flex: 0 0 50%;
-  padding: 20px;
-}
+        .service_content {
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+        }
 
-.aula_content {
-  text-align: center;
-}
+        .service_content i {
+            font-size: 48px;
+            margin-bottom: 10px;
+        }
 
-.aula_content i {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.aula_content p {
-  font-size: 18px;
-  margin-bottom: 10px;
-}
+        .service_content p {
+            font-size: 18px;
+        }
