--- a/estilo.css
+++ b/estilo.css
@@ -686,3 +686,10 @@ a {
         .service_content p {
             font-size: 18px;
         }
+        .bootstrap-icon {
+        color: #7952b3; 
+        }
+
+        .react-icon {
+        color: #61dbfb;
+        }    
